--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: "14.17.6"
+          node-version: "14"
       - name: Install Frontend Dependancies
         working-directory: ./UI
         run: npm install
@@ -27,13 +27,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.9.7"
+          python-version: "3.9"
       - name: Install Backend Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Create Environment File
-        run: echo ${{ secrets.API_KEY }} > .env
+        run: echo API__KEY=${{ secrets.API_KEY }} > .env
       - name: Create Executable
         run: python -m eel MovieSieve.py web --onefile --noconsole --icon=web/favicon.ico
       - name: Create Release
@@ -42,8 +42,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          overwrite: true
           draft: false
           prerelease: false
       - name: Upload Release Asset
@@ -54,5 +55,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist/MovieSieve.exe
-          asset_name: MovieSieve_${{ github.ref }}.exe
+          asset_name: MovieSieve_${{ github.ref_name }}.exe
           asset_content_type: application/zip
