--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -28,6 +28,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.9"
+      - name: Create and activate Virtual Environment
+        run: |
+          python -m venv env
+          env\Scripts\activate
       - name: Install Backend Dependencies
         run: |
           python -m pip install --upgrade pip
