--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -37,7 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Create Environment File
-        run: echo API_KEY=${{ secrets.API_KEY }} > .env
+        run: echo API_KEY=${{ secrets.API_KEY }} > web/.env
       - name: Create Executable
         run: python -m eel MovieSieve.py web --onefile --noconsole --icon=web/favicon.ico
       - name: Create Release
